--- a/minimax.tex
+++ b/minimax.tex
@@ -572,10 +572,9 @@ Our next set of experiments evaluate the Pessimistic strategy in absolute terms.
 We first wonder how many questions should be asked in order to achieve low regret, fixed at $n / 10$: this is equivalent to the difference of score of an alternative $x$ that results from switching from a profile $P$ to a profile $P'$ where a tenth of the agents rank $x$ last instead of first.
 Table 2, first five columns, contain the result: it displays, for each dataset, the number of questions asked to the committee, and the quartiles of the number of questions asked to the voters, averaged over $20$ runs. It is interesting to note that about twenty or thirty questions per voter on average suffice to reach a low regret in those instances. We find also noteworthy that the Pessimistic strategy chooses to ask zero questions to the chair but still achieves low regret, in most of those instances.
 
-Another interesting measure is the average number of questions asked to each participant before reaching zero regret. The results for various sizes are displayed in the last two columns of \cref{tab:questions}. 
+Another interesting measure is the average number of questions asked to each participant before reaching zero regret. The results for various sizes are displayed in the last two columns of \cref{tab:questions}. Here, we see that the Pessimistic strategy does choose to question the chair when reaching low enough regret values. The tshirts and m15n30 datasets did not reach zero regret in $1000$ questions.
 
-It is important to mention that we stop our computation at $1000$ questions, the empty cells in \cref{tab:questions} indicate, thus, that the Pessimistic strategy applied to that dataset did not reach zero regret in $1000$ questions.
-\commentOC{Need to drop the explanation in Table 2 as this is now explained in the text; change qcMMR=n/10 to qcMMR=0, and add in the text the explanation about qxMMR=; change hyphens to blanks in the table,= I suppose.}
+\commentOC{Need to drop the explanation in Table 2 as this is now explained in the text; change qcMMR=n/10 to qcMMR=0, and add in the text the explanation about qxMMR=; change hyphens to blanks in the table.}
 %For example, in the case $m = 10, n = 20$, Pessimistic asks on average $49$ questions to the chair and $18$ questions to each agent (\cref{tab:Numquestions} provides more data).
 \vspace{-0.6cm}
 \begin{table}
