new tshirts data

--- a/minimax.tex
+++ b/minimax.tex
@@ -585,7 +585,7 @@ Another interesting measure is the average number of questions asked to the chai
 		m5n20 & 5&20&0.0&0.0&[4.3 &4.95 & 5.84 &5.25&9.59&[ \ 5.36 & 6.15 & 7.21\\
 		m10n20&10&20&0.0&0.0&[13.85 & 16.1& 18.41&31.95&26.62&[19.66 & 21.78 & 24.7\\
 		m11n30&11&30&0.0&0.0&[16.55&19.0&22.26&45.15&40.14&[23.07&25.7&28.89\\
-		tshirts&11&30&0.0&0.0&[12.92 & 16.17 &19.3\\
+		tshirts&11&30&0.0&0.0&[12.92 & 16.17 &19.3& 44.8 &12.24&[28.0 &	31.5 &34.9\\
 		courses&9&146&0.0&0.0&[6.35 &7.0 &7.0&0.0&0.0&[6.8 & 7.0 &7.0\\
 		%m9n146&9&146&0&0&[1.94 &8 &9.25&999.3&0.47&0&0&[1.94&8&9.25&999.3&0.47\\
 		m14n9&14&9&5.4&9.49&[30.3&33.45&36.65&64.05&40.37&[37.55&40.5&44.3\\
