--- a/minimax.tex
+++ b/minimax.tex
@@ -51,23 +51,22 @@
 % an abbreviated paper title here
 %
 
-\author{Submission 15}
-\institute{}
+%\author{Submission 15}
+%\institute{}
 
-%\author{Beatrice Napolitano\inst{1}\orcidID{0000-0002-3887-6206} \and
-%Olivier Cailloux\inst{1}\and
-%Paolo Viappiani\inst{2}}
-%%
-%\authorrunning{B. Napolitano et al.}
-%% First names are abbreviated in the running head.
-%% If there are more than two authors, 'et al.' is used.
-%%
-%\institute{Université Paris-Dauphine, Université PSL, CNRS, LAMSADE \and
-%LIP6, UMR 7606, CNRS and Sorbonne Universit\'e \\
-%\email{beatrice.napolitano@dauphine.fr}}
+\author{Beatrice Napolitano\inst{1}\orcidID{0000-0002-3887-6206} \and
+Olivier Cailloux\inst{1}\and
+Paolo Viappiani\inst{2}}
+%
+\authorrunning{B. Napolitano et al.}
+% First names are abbreviated in the running head.
+% If there are more than two authors, 'et al.' is used.
+%
+\institute{Université Paris-Dauphine, Université PSL, CNRS, LAMSADE \and
+LIP6, UMR 7606, CNRS and Sorbonne Universit\'e \\
+\email{beatrice.napolitano@dauphine.fr}}
 
 \maketitle              % typeset the header of the contribution
-\vspace{4em}
 %
 \begin{abstract}
 %The abstract should briefly summarize the contents of the paper in
@@ -674,14 +673,14 @@ In the \textit{Skate} problem, the value $\MMR\!=\!1$ is reached after less than
 			{$q_c$} & {2 ph.\ ca} & {sd} & {2 ph.\ ac} & {sd} \\
 			\midrule		
 	
-			0	&	0.62	&	0.52	&	0.62	&	0.52	\\
-			15	&	0.515	&	0.48	&	0.54	&	0.46	\\
-			30	&	0.345	&	0.47	&	0.325	&	0.425	\\
-			50	&	0.045	&	0.09	&	0.03	&	0.065	\\
-			100	&	0.14	&	0.23	&	0.075	&	0.135	\\
-			200	&	2.305	&	1.36	&	2.145	&	1.845	\\
-			300	&	5.15	&	2.38	&	6.83	&	0.625	\\
-			400	&	10.905	&	0.89	&	12.245	&	0.99	\\
+			0	&	0.59	&	0.59	&	0.59	&	0.59	\\
+			15	&	0.5		&	0.49	&	0.55	&	0.58	\\
+			30	&	0.32	&	0.45	&	0.36	&	0.46	\\
+			50	&	0.08	&	0.2 	&	0.14	&	0.27	\\
+			100	&	0.39	&	0.57	&	0.23	&	0.46	\\
+			200	&	2.13	&	1.59	&	2.38	&	1.23	\\
+			300	&	5.8 	&	1.65	&	6.65	&	1.46	\\
+			400	&	11.28	&	1.09	&	11.94	&	1.22	\\
 			500	&	20.0	&	0.0	&	20.0	&	0.0	\\
 			
 			\bottomrule
@@ -708,7 +707,8 @@ suggest that regret-based elicitation is effective and allows to quickly reduce 
 %regret, but they also show that starting with zero knowledge became a pretentious approach really quickly when increasing the size of the problem. Future works will therefore include the test of these strategies on partial specified profiles, ideally on real datasets. An other important direction is the extension to voting rules beyond scoring rules.
 %Regret-based elicitation allows to determine near-optimal winners using only few information about the agent preferences.
 
-As part of our contribution, an open-source library, to reproduce our experiments and perform many more, will be made publicly available. (URL not displayed for reasons of anonymity.)
+As part of our contribution, we provide an open-source library \url{https://github.com/oliviercailloux/minimax}, to reproduce our experiments and perform many more.
+%will be made publicly available.(URL not displayed for reasons of anonymity.)
 %and serve as a basis for further research
 
 Some directions for future works include developing new elicitation strategies, considering alternative heuristics; extending the elicitation to voting rules beyond scoring rules; eliciting preferences while restraining to concrete and easy questions.
